# TLS_socket

./: .gitignore  CMakeLists.txt  README.md
TLS_socket/: TCP.h  TLS_socket.h  platform_entropy.h
TLS_socket/src/: TLS_cfg.h  TLS_socket.c  dummy_exit.c  dummy_exit.h
TLS_socket/src/platform_unix/: TCP_unix.c  TCP_unix.h  platform_entropy_unix.c  platform_entropy_unix.h
tests/: CMakeLists.txt  TLS.test.c  TLS_CA.example.h  TLS_socket.test.c  demo_request.c  demo_request.h  dependencies.cmake  server_settings.example.h  sha256.test.c
